syntax = "proto3";

package o5.aws.deployer.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/state/v1/metadata.proto";
import "o5/environment/v1/cluster.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_pb";

message ClusterKeys {
  option (j5.ext.v1.psm).entity_name = "cluster";

  string cluster_id = 1 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary = true
  ];
}

message ClusterState {
  j5.state.v1.StateMetadata metadata = 1 [(buf.validate.field).required = true];

  ClusterKeys keys = 2 [
    (j5.ext.v1.field).message.flatten = true,
    (buf.validate.field).required = true
  ];

  ClusterStatus status = 3 [(j5.list.v1.field).enum.filtering = {
    filterable: true
    default_filters: ["CLUSTER_STATUS_ACTIVE"]
  }];

  ClusterStateData data = 4;
}

message ClusterStateData {
  o5.environment.v1.Cluster base_config = 5;
  repeated ParameterOverride overrides = 6;

  // config = base_config + overrides
  o5.environment.v1.Cluster config = 4;
}

message ParameterOverride {
  string key = 1 [(buf.validate.field).required = true];

  // set to nil to remove the parameter
  optional string value = 2;
}

enum ClusterStatus {
  CLUSTER_STATUS_UNSPECIFIED = 0;
  CLUSTER_STATUS_ACTIVE = 1;
}

message ClusterEvent {
  j5.state.v1.EventMetadata metadata = 1 [(buf.validate.field).required = true];
  ClusterKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).message.flatten = true
  ];
  ClusterEventType event = 3 [(buf.validate.field).required = true];
}

message ClusterEventType {
  oneof type {
    option (j5.list.v1.oneof).filtering.filterable = true;

    Configured configured = 1;
    Override override = 2;
  }

  message Configured {
    o5.environment.v1.Cluster config = 1;
  }

  message Override {
    repeated ParameterOverride overrides = 1;
  }
}
